--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
+    "hls.js": "^1.5.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "stream": "file:"
+    "stream": "file:",
+    "video.js": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
